[project]
name = "intern_onboarding"
version = "0.1.0"
description = ""
authors = [
    {name = "Jackson Faulkner",email = "jackson.faulkner@mckinney.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.25.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
